SET (THIS_SRC
        consecutive_find.h
        find_last.h
        transform_if.h
        flag_mask.h
        improve_containers.h
        sorted_find.h
        scope_guard.h
        manager_pattern.h
        registry_pattern.h
        helpers.h
        observer.h
        astar.h
        conversion.h
        split.h
    )

add_subdirectory (ut)
